Fix font weight on Firefox

--- a/src/components/routeDiagram/stop.css
+++ b/src/components/routeDiagram/stop.css
@@ -26,6 +26,7 @@
 }
 
 .subtitle {
+    font-weight: 300;
     font-size: 11px;
 }
 
