--- a/src/components/stopPoster/header.css
+++ b/src/components/stopPoster/header.css
@@ -9,7 +9,7 @@
 
 .subtitle {
     composes: title;
-    font-weight: 400;
+    font-weight: 300;
 }
 
 .small {
