--- a/src/components/stopPoster/map.css
+++ b/src/components/stopPoster/map.css
@@ -78,7 +78,7 @@
 .subtitle {
     color: gray;
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 300;
 }
 
 .content {
