--- a/src/components/stopPoster/routes.css
+++ b/src/components/stopPoster/routes.css
@@ -30,5 +30,5 @@
 
 .subtitle {
     composes: title;
-    font-weight: 400;
+    font-weight: 300;
 }
