--- a/src/components/timetable/timetable.css
+++ b/src/components/timetable/timetable.css
@@ -3,7 +3,7 @@
 .root {
     padding: 10px 20px 30px;
     color: gray;
-    font-weight: 400;
+    font-weight: 300;
     font-family: fontFamilyNarrow;
     background: backgroundLight;
     border-radius: borderRadius;
